change project name

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>S291Settings</name>
+	<name>JueLianSettings_Mod</name>
 	<comment></comment>
 	<projects>
 	</projects>
